@@ -237,8 +237,10 @@ export(sts2disProg)
 
 export(cox)
 export(as.epidata)
+S3method(as.epidata, data.frame)
+export(as.epidata.data.frame)
 S3method(as.epidata, default)
-export(as.epidata.default)              # for convenience
+export(as.epidata.default)
 export(intersperse)
 export(twinSIR)
 export(stateplot)
