@@ -1,12 +1,13 @@
 \name{epidata}
 \alias{as.epidata}
+\alias{as.epidata.data.frame}
 \alias{as.epidata.default}
 \alias{print.epidata}
 \alias{[.epidata}
 \alias{epidata}
 
 \title{
-Class for Epidemic Data Discrete in Space and Continuous in Time
+Continuous-Time SIR Event History of a Fixed Population
 }
 
 \description{
@@ -25,6 +26,8 @@ Class for Epidemic Data Discrete in Space and Continuous in Time
 \usage{
 as.epidata(data, ...)
 
+\method{as.epidata}{data.frame}(data, t0, tE.col, tI.col, tR.col,
+           id.col, coords.cols, f = list(), keep.cols = TRUE, ...)
 \method{as.epidata}{default}(data, id.col, start.col, stop.col, atRiskY.col,
            event.col, Revent.col, coords.cols, f = list(), ...)
 
@@ -34,29 +37,57 @@ as.epidata(data, ...)
 
 \arguments{
   \item{data}{
-    For the default method a \code{\link{matrix}} or a \code{\link{data.frame}}.
-    It contains the observed event history in a form similar to 
+    For the \code{data.frame}-method, a data frame with as many rows as
+    there are individuals in the population and time columns indicating
+    when each individual became exposed (optional), infectious
+    (mandatory, but can be \code{NA} for non-affected individuals) and
+    removed (optional). Note that this data format does not allow for
+    re-infection (SIRS) and time-varying covariates.
+    The \code{data.frame}-method converts the individual-indexed data
+    frame to the long event history start/stop format and then feeds it
+    into the default method. If calling the generic function
+    \code{as.epidata} on a \code{data.frame} and the \code{t0} argument
+    is missing, the default method is called directly.\cr
+    For the default method, \code{data} can be a \code{\link{matrix}} or
+    a \code{\link{data.frame}}.
+    It must contain the observed event history in a form similar to 
     \code{Surv(, type="counting")} with additional information (variables) along 
-    the process.  It must not be sorted in any specific order; this will be done 
-    automatically during conversion.  The observation period is splitted up into 
-    \emph{consecutive} intervals of constant state - thus constant infection 
-    intensities.  The data frame consists of a block of N (number of individuals) 
-    rows for each of those time intervals (all rows in a block share the same start 
-    and stop values... therefore the name \dQuote{block}), where there is one 
+    the process.  Rows will be sorted automatically during conversion.
+    The observation period is splitted up into \emph{consecutive}
+    intervals of constant state - thus constant infection intensities.
+    The data frame consists of a block of \eqn{N} (number of individuals) 
+    rows for each of those time intervals (all rows in a block have the same start 
+    and stop values\dots therefore the name \dQuote{block}), where there is one 
     row per individual in the block.  Each row describes the (fixed) state of 
     the individual during the interval given by the start and stop columns 
     \code{start.col} and \code{stop.col}.\cr
     Note that there may not be more than one event (infection or removal) in a
     single block.  Thus, in a single block, only one entry in the 
     \code{event.col} and \code{Revent.col} may be 1, all others are 0.  This
-    rule follows the assumption that there are no concurrent events (infections
-    or removals).
+    rule follows the point process characteristic that there are no
+    concurrent events (infections or removals).
+  }
+  \item{t0}{
+    start time of the observation period. Will be subtracted
+    from the time columns \code{tE.col}, \code{tI.col}, \code{tR.col}.
+    Individuals that have already been removed prior to \code{t0}, i.e.,
+    rows with \code{tR <= t0}, will be dropped.
+  }
+  \item{tE.col, tI.col, tR.col}{
+    single numeric or character indexes of the time columns in
+    \code{data}, which specify when the individuals became exposed,
+    infectious and removed, respectively.
+    \code{tE.col} and \code{tR.col} can be missing, corresponding to
+    SIR, SEI, or SI data. \code{NA} entries mean that the respective
+    event has not (yet) occurred. Note that \code{is.na(tE)} implies
+    \code{is.na(tI)} and \code{is.na(tR)}, and \code{is.na(tI)} implies
+    \code{is.na(tR)} (and this is checked for the provided data).
   }
   \item{id.col}{
-    single index of the \code{id} column in \code{data}.  Can be numeric
-    (by column number) or character (by column name).
-    The \code{id} column identifies the individuals in the data frame.  It will
-    be converted to a factor variable.
+    single numeric or character index of the \code{id} column in \code{data}.
+    The \code{id} column identifies the individuals in the data frame.
+    It is converted to a factor by calling \code{\link{factor}}, i.e.,
+    unused levels are dropped if it already was a factor.
   }
   \item{start.col}{
     single index of the \code{start} column in \code{data}.  Can be numeric
@@ -99,13 +130,13 @@ as.epidata(data, ...)
     index\emph{es} of the \code{coords} column\emph{s} in \code{data}. Can be
     a numeric (by column number) vector, a character (by column name) vector
     or \code{NULL} (in which case epidemic covariates are not calculateable).
-    These columns contain the coordinates of the individuals.  It must be
-    emphasized that the functions related to \code{\link{twinSIR}} models currently assume
+    These columns contain the coordinates of the individuals.
+    Note that the functions related to \code{\link{twinSIR}} currently assume
     \emph{fixed positions} of the individuals during the whole epidemic.  Thus, an
     individual has the same coordinates in every block.  For simplicity, the
     coordinates are derived from the first time block only (normally the rows 
     with \code{start == 0}).
-    The epidemic covariates are calculated based on the euclidian distances
+    The epidemic covariates are calculated based on the Euclidian distances
     between the individuals, see \code{f}.
   }
   \item{f}{
@@ -113,7 +144,7 @@ as.epidata(data, ...)
     if calculation of epidemic covariates is not requested.  The functions must
     interact elementwise on a (distance) matrix so that - for a matrix D -
     f[[m]](D) results in a matrix.  A simple example is
-    \code{function(u) {u <= 1}}, which indicates if the euclidian distance
+    \code{function(u) {u <= 1}}, which indicates if the Euclidian distance
     between the individuals is smaller than or equal to 1.  To ensure that an
     individual does not influence itself, the distance to itself is defined as
     \code{Inf}.  Consequently, all of the distance functions must have the
@@ -126,11 +157,20 @@ as.epidata(data, ...)
     \eqn{\sum_{j \in I(t)} f_m(||s_i - s_j||)}{%
          \sum_{j in I(t)} f[[m]](||s_i - s_j||)}
   }
+  \item{keep.cols}{
+    logical indicating if all columns in \code{data}
+    should be retained (and not only the obligatory \code{"epidata"}
+    columns), in particular any additional columns with 
+    time-constant individual-specific covariates.
+    Alternatively, \code{keep.cols} can be a numeric or character vector
+    indexing columns of \code{data} to keep.
+  }
   \item{x}{
     an object of class \code{"epidata"}.
   }
   \item{\dots}{
-    arguments passed to \code{\link{print.data.frame}}. Currently unused in \code{as.epidata}.
+    arguments passed to \code{\link{print.data.frame}}. Currently unused
+    in the \code{as.epidata}-methods.
   }
   \item{i,j,drop}{
     arguments passed to \code{\link{[.data.frame}}.
